--- a/ReliableKafka.Consumers.Confluent/ReliableKafka.Consumers.Confluent.csproj
+++ b/ReliableKafka.Consumers.Confluent/ReliableKafka.Consumers.Confluent.csproj
@@ -7,6 +7,11 @@
 
     <ItemGroup>
       <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.12" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ReliableKafka.Processor\ReliableKafka.Processor.csproj" />
     </ItemGroup>
 
 </Project>
