--- a/ReliableKafka.Producers.Confluent/ReliableKafka.Producers.Confluent.csproj
+++ b/ReliableKafka.Producers.Confluent/ReliableKafka.Producers.Confluent.csproj
@@ -9,4 +9,8 @@
         <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ReliableKafka.Shared\ReliableKafka.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
